--- a/REST/package.json
+++ b/REST/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^9.0.0"
   }
 }
